--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,62 +1,30 @@
+# my global config
 global:
-  scrape_interval: 5s
-  evaluation_interval: 5s
-
-  external_labels:
-    monitor: "prometheus-grafana-exporter"
+  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+  # scrape_timeout is set to the global default (10s).
 
 # Alertmanager configuration
 alerting:
   alertmanagers:
-    - static_configs:
-        - targets:
-            - alertmanager:9093
+  - static_configs:
+    - targets:
+      # - alertmanager:9093
 
+# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-  - "alert.rules"
+  # - "first_rules.yml"
+  # - "second_rules.yml"
 
+# A scrape configuration containing exactly one endpoint to scrape:
+# Here it's Prometheus itself.
 scrape_configs:
-  - job_name: "prometheus"
-    scrape_interval: 10s
-    static_configs:
-      - targets: ["localhost:9090"]
+  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
+  - job_name: 'jogo'
 
-  - job_name: "node"
-    metrics_path: /metrics
-    scrape_interval: 10s
-    static_configs:
-      - targets: ["nodeexporter:9100"]
-  - job_name: "app"
-    metrics_path: /
-    static_configs:
-      - targets: ["localhost:5000"]
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
 
-  - job_name: "httpd"
-    metrics_path: /probe
-    params:
-      module: [http_2xx]
     static_configs:
-      - targets:
-          - http://httpd:80
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: blackbox:9115
+    - targets: ['192.168.100.8:5050'] 
 
-  - job_name: "nginx"
-    metrics_path: /probe
-    params:
-      module: [http_2xx]
-    static_configs:
-      - targets:
-          - http://nginx:80
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: blackbox:9115
